raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-35-43.ceg/compilation.txt
NT.java:16: error: ';' expected
        double[] nilaiMasuk = new double[5]
                                           ^
NT.java:33: error: class, interface, enum, or record expected
}
^
2 errors
Not compiled
